# MDEV-239: Assertion `field_types == 0 ... ' failed in Protocol_text::store... - Make all functions that produce parts of EXPLAIN output take   explain_flags as parameter, instead of looking into thd->lex->describe